# wgpu_test

./: Cargo.toml
binary/: Cargo.toml
binary/src/: main.rs
game_engine/: Cargo.toml  README.md
game_engine/src/: app.rs  lib.rs
render_engine/: Cargo.toml  README.md
render_engine/src/: lib.rs  methods.rs  model.rs  state.rs
render_engine/src/shaders/: shader.wgsl
