[package]
name = "library"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = { version = "0.30.9" }
env_logger = "0.11.8"
log = "0.4"
wgpu = "25.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"


[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]
